--- a/tip-pool/index.html
+++ b/tip-pool/index.html
@@ -77,7 +77,6 @@
         </tbody>
       </table>
     </section>
-    <!-- uncoment the following to run Jasmine tests -->
 
     <link
       rel="stylesheet"
@@ -98,8 +97,8 @@
     ></script>
 
     <script src="servers.test.js"></script>
-
-    <!-- end of Jasmine tests -->
+    <script src="payments.test.js"></script>
+    <script src="helpers.test.js"></script>
 
     <script src="payments.js"></script>
     <script src="servers.js"></script>
